Fix Nav Bar minor overlapping issue

--- a/style/style.css
+++ b/style/style.css
@@ -111,6 +111,7 @@ article > p {
   max-width: 100%;
   border-bottom: 1px solid rgb(233, 233, 233);
   padding: 5px;
+  z-index: 999;
 }
 
 #right-nav-container {
